<resources>
    <string name="app_name">MyNotes</string>
    <string name="search_notes">Search Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete">Delete</string>
    <string name="are_your_sure_you_want_to_delete_this_note">Are your sure you want to delete this note?</string>
    <string name="add_note">Add Note</string>
    <string name="search">Search</string>
    <string name="grid">Grid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="locked">Locked</string>
    <string name="trash">Trash</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="choose_action">Choose Action...</string>
    <string name="lock">Lock</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="delete_small">delete</string>
    <string name="communicate">Communicate</string>
    <string name="no_notes">No Notes</string>
    <string name="no_favorite">No Favorite</string>
    <string name="no_locked">No Locked</string>
    <string name="backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="no_trash">No Trash</string>
    <string name="notes">Notes</string>
    <string name="add">Add</string>
    <string name="lock_note">Lock Note</string>
    <string name="done">Done</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="set">Set</string>
    <string name="security">Security</string>
    <string name="note_pincode">Note Pincode</string>
    <string name="pincode_unset">Pincode Unset</string>
    <string name="settings">Settings</string>
    <string name="save_note">Save Note</string>
    <string name="do_you_want_save_this_note">Do you want save this note?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>