<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lockNoteAlertDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/iconLock"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_lock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/locked"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/iconLock"
        app:layout_constraintTop_toTopOf="@id/iconLock"
        app:layout_constraintBottom_toBottomOf="@+id/iconLock"/>

    <EditText
        android:id="@+id/inputSetPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:hint="@string/enter_pin"
        android:background="@null"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@+id/iconLock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/set"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/inputSetPin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textLockCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="@id/textSet"
        app:layout_constraintBottom_toBottomOf="@+id/textSet"
        app:layout_constraintEnd_toStartOf="@+id/textSet"/>

</androidx.constraintlayout.widget.ConstraintLayout>