<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notesBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/choose_action"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/_70sdp"
       android:orientation="horizontal">

      <LinearLayout
          android:id="@+id/layoutFavorite"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:background="?attr/selectableItemBackgroundBorderless">

          <ImageView
              android:id="@+id/b_fav_image"
              android:layout_width="@dimen/_25sdp"
              android:layout_height="@dimen/_25sdp"
              android:contentDescription="@string/app_name"
              android:src="@drawable/ic_favorite"
              app:tint="@color/colorWhite"/>

          <TextView
              android:id="@+id/textFavorite"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/ubuntu_medium"
              android:text="@string/favorite"
              android:textSize="@dimen/_14ssp"
              android:textColor="@color/colorWhite"/>

      </LinearLayout>

       <LinearLayout
           android:id="@+id/layoutLocked"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:orientation="vertical"
           android:gravity="center"
           android:clickable="true"
           android:focusable="true"
           android:background="?attr/selectableItemBackgroundBorderless">

           <ImageView
               android:id="@+id/b_locked_image"
               android:layout_width="@dimen/_25sdp"
               android:layout_height="@dimen/_25sdp"
               android:contentDescription="@string/app_name"
               android:src="@drawable/ic_lock"
               app:tint="@color/colorWhite"/>

           <TextView
               android:id="@+id/b_locked_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/ubuntu_medium"
               android:text="@string/lock"
               android:textSize="@dimen/_14ssp"
               android:textColor="@color/colorWhite"/>

       </LinearLayout>

       <LinearLayout
           android:id="@+id/layoutDelete"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:orientation="vertical"
           android:gravity="center"
           android:clickable="true"
           android:focusable="true"
           android:background="?attr/selectableItemBackgroundBorderless">

           <ImageView
               android:id="@+id/b_delete_image"
               android:layout_width="@dimen/_25sdp"
               android:layout_height="@dimen/_25sdp"
               android:contentDescription="@string/app_name"
               android:src="@drawable/ic_delete"
               app:tint="@color/colorWhite"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/ubuntu_medium"
               android:text="@string/delete_small"
               android:textSize="@dimen/_14ssp"
               android:textColor="@color/colorWhite"/>

       </LinearLayout>

   </LinearLayout>

</LinearLayout>