<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/deleteNoteDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iconDelete"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorNoteColor3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/delete"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorNoteColor3"
        app:layout_constraintStart_toEndOf="@+id/iconDelete"
        app:layout_constraintTop_toTopOf="@id/iconDelete"
        app:layout_constraintBottom_toBottomOf="@+id/iconDelete"/>

    <TextView
        android:id="@+id/textDeleteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/are_your_sure_you_want_to_delete_this_note"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/iconDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/delete"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorNoteColor3"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textDeleteCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@id/textDelete"
        app:layout_constraintBottom_toBottomOf="@+id/textDelete"
        app:layout_constraintEnd_toStartOf="@+id/textDelete"/>

</androidx.constraintlayout.widget.ConstraintLayout>