<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/action_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:elevation="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/settings_image_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:contentDescription="@string/app_name"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_4sdp"
            app:tint="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:text="@string/settings"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/security"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorAccent"/>

            <RelativeLayout
                android:id="@+id/note_pin_code_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/note_pin_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/note_pincode"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/text_pincode_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:layout_below="@+id/note_pin_code"
                    android:includeFontPadding="false"
                    android:text="@string/pincode_unset"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/colorAccent"/>

                <CheckBox
                    android:id="@+id/note_pin_code_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false"
                    android:focusable="false"
                    android:buttonTint="@color/colorAccent"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>